# sepet

./: .gitignore  CMakeLists.txt  README.md
include/sepet/: sepet.h
src/: CMakeLists.txt  main.c  sepet.c
